--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
 
 
+<h1>Avalanche Education</h1>
+<p>Making avalanche education more accessible for everyone</p>
 <%= link_to "About", about_path %>
+
