--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,15 @@
 
+<body class="w-100" style="background-size: 100%; background-image: url(https://images.unsplash.com/photo-1643701846261-a96ab2da7188?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80);">
+    
+<div class="container mt-4">
+<div class="p-5 m-5"></div>
+<div class="w-75 float-start" style="background: white; border-radius: 15px">
+<h1 class="mt-7 p-2 text-center">Your one-stop shop for Avalanche Education courses! </h1>
+<h5 class="p-1">Tired of scouring the internet every time you need to find a snowpack assessment refresher or want to watch an early season KBYG lecture? Find everything you need in the courses tab!</h5>
+<div class="d-flex justify-content-center pb-2">
+<%= link_to "View Courses", courses_path, class: "btn btn-info text-light"%>
+</div>
+</div>
 
-<h1>Avalanche Education</h1>
-<p>Making avalanche education more accessible for everyone</p>
-<%= link_to "About", about_path %>
-
+</div>
+</body>
