--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+
 <h1>Editing course</h1>
 
 <%= render "form", course: @course %>
@@ -7,4 +9,5 @@
 <div>
   <%= link_to "Show this course", @course %> |
   <%= link_to "Back to courses", courses_path %>
+</div>
 </div>
