--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <h1>New course</h1>
 
 <%= render "form", course: @course %>
@@ -6,4 +7,6 @@
 
 <div>
   <%= link_to "Back to courses", courses_path %>
+</div>
+
 </div>
